# notion-fitness-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  remaining.md
.github/workflows/: deploy_charts.yml  garmin_sync.yml  hevy_sync.yml  running_sync.yml  stryd_sync.yml  update_dashboard.yml
scripts/: cleanup_duplicates.py  garmin_sync.py  generate_charts_data.py  hevy_sync.py  notion_client.py  refresh_garmin_tokens.py  stryd_sync.py  update_dashboard.py
site/: app.js  index.html  style.css
tests/: test_cleanup_duplicates.py  test_garmin_sync.py  test_generate_charts_data.py  test_hevy_sync.py  test_notion_client.py  test_stryd_sync.py  test_update_dashboard.py
